--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^4.30.5",
+    "@tanstack/react-query": "^5.24.1",
+    "@types/react-query": "^1.2.9",
     "chroma-js": "^2.4.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -19,9 +21,12 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1",
     "react-select": "^5.8.0",
-    "recoil": "^0.7.7"
+    "react-slick": "^0.30.2",
+    "recoil": "^0.7.7",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.20.1",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
