--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@types/react-query": "^1.2.9",
     "axios": "^1.6.7",
     "chroma-js": "^2.4.2",
+    "jwt-decode": "^4.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-places-autocomplete": "^4.0.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1",
     "react-select": "^5.8.0",
